--- a/travel-together-app/travel-together/templates/base.html
+++ b/travel-together-app/travel-together/templates/base.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Microblogging app</title>
+    <title>Travel together</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='microblog.css') }}"
+      href="{{ url_for('static', filename='travel-together.css') }}"
     />
     <link
       rel="resources"
@@ -30,6 +30,6 @@
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='microblog.js') }}"></script>
+    <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
   </body>
 </html>
