--- a/travel_together_app/travel_together/templates/main/user_template.html
+++ b/travel_together_app/travel_together/templates/main/user_template.html
@@ -32,6 +32,6 @@
         {% endfor %}
       </ul>
     </header>
-    <section>{% include 'posts_template.html' %}</section>
+    <section>{% include 'trips_template.html' %}</section>
 </div>
 {% endblock %}
