--- a/travel_together_app/travel_together/templates/main/index.html
+++ b/travel_together_app/travel_together/templates/main/index.html
@@ -39,7 +39,7 @@
           name="departure location"
           rows="1"
           cols="50"
-          placeholder="Departure location..."
+          placeholder="Departure location (optional)..."
         ></textarea>
         <br>
         <textarea
@@ -56,6 +56,8 @@
         <br>
         <label for="budget">Budget:</label>
         <input type="number" id="budget" name="budget" min="0">
+        <label for="max_members">Maximum Trip Members:</label>
+        <input type="number" id="max_members" name="max_members" min="0">
         <br>
         <button type="submit">Publish</button>
       </form>
