--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -14,12 +14,14 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="../../static/resources/logo.png" alt="X logo" class="xlogo" />
-        <h1>Microblogging</h1>
-        <img src="../resources/pfp.png" alt="Profile" class="plogo" />
+      <div class="header-container">
+        <a href="{{ url_for('main.index') }}">
+          <img src="../../static/resources/logo.png" alt="Home" class="header-icon header-logo" />
+        </a>
+        <h1>Travel together&trade;</h1>
+        <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
       </div>
-      <a href="{{ url_for('main.index') }}">Home</a>
+      
       {% if current_user.is_authenticated: %}
       <a href="{{ url_for('auth.logout_post') }}">Logout</a>
       {% endif %}
