--- a/travel_together_app/travel_together/templates/auth/login.html
+++ b/travel_together_app/travel_together/templates/auth/login.html
@@ -1,12 +1,30 @@
+{% block head %}
+    <title>Login - Travel together</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"/>
+{% endblock %}
+
 {% extends 'base.html' %}
+
 {% if current_user.is_authenticated: %}
     <div>User: {{current_user.name}}</div>
 {% endif %}
 {% block content %}
-    <h2>Login!!!</h2>
-    <form action="{{ url_for('auth.login_post') }}" method="post">
-        <div><label>Email: <input type="email" name="email" required/></label></div>
-        <div><label>Password: <input type="password" name="password" required/></label></div>
-        <div><input type="submit" value="Login"/></div>
-    </form>
+    <div class="main-container">
+        <div class="login-container">
+            <h2>Log In</h2>
+            <form class="form-container" action="{{ url_for('auth.login_post') }}" method="post">
+                <div class="credential-inputs">
+                    <input type="email" name="email" placeholder="Email" required/>
+                    <input type="password" name="password" placeholder="Password" required/>
+                </div>
+                <input type="submit" value="Log In"/>
+            </form>
+            <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up</a></p>
+        </div>
+        <div class="info-container">
+            <img src="../../static/resources/logo-full.png" class="info-image"/>
+            <h1>Welcome to Travel together&trade;</h1>
+            <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like you.</p>
+        </div>
+    </div>
 {% endblock %}
