--- a/travel_together_app/travel_together/templates/auth/signup.html
+++ b/travel_together_app/travel_together/templates/auth/signup.html
@@ -1,16 +1,34 @@
+{% block head %}
+    <title>Sign up - Travel together</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}"/>
+{% endblock %}
+
 {% extends 'base.html' %}
 {% if current_user.is_authenticated: %}
     <div>User: {{current_user.name}}</div>
 {% endif %}
 {% block content %}
-    <h2>Sign Up!!!</h2>
-    <form action="{{ url_for('auth.signup_post') }}" method="post">
-        <div><label>Email: <input type="email" name="email" required/></label></div>
-        <div><label>User name: <input type="text" name="username" required/></label></div>
-        <div><label>Password: <input type="password" name="password" required/></label></div>
-        <div><label>Repeat password: <input type="password" name="password_repeat" required/></label></div>
-        <div><input type="submit" value="Sign Up"/></div>
-    </form>
+    <div class="main-container">
+        <div class="signup-container">
+            <h2>Sign Up</h2>
+            <form class="form-container" action="{{ url_for('auth.signup_post') }}" method="post">
+                <div class="credential-inputs">
+                    <input type="email" name="email" placeholder="Email" required/>
+                    <input type="text" name="username" placeholder="Username" required/>
+                    <input type="password" name="password" placeholder="Password" required/>
+                    <input type="password" name="password_repeat" placeholder="Repeat password" required/>
+                </div>
+                <input type="submit" value="Sign Up"/>
+            </form>
+            <p>Already have an account? <a href="{{ url_for('auth.login') }}">Log in</a></p>
+            </div>
+            <div class="info-container">
+                <img src="../../static/resources/logo-full.png" class="info-image"/>
+                <h1>Welcome to Travel together&trade;</h1>
+                <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like you.</p>
+            </div>
+        </div>
+    </div>
     {% with messages = get_flashed_messages() %}
         {% for message in messages %}
             <div class="notification">{{ message }}</div>
