--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -63,6 +63,33 @@ body footer {
     transform: translateY(1px); /* optional pressed effect */
 }
 
+.header-container h1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+}
+
+.spacer {
+    display: inherit;
+    flex-direction: inherit;
+    justify-content: inherit;
+    align-items: inherit;
+    gap: 5px;
+}
+
+.logout-button {
+    margin: 0;
+    padding: 5px 10px;
+    background-color: #900000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    text-decoration: none;
+    text-shadow: none;
+}
 
 /*============================== FEED ==============================*/
 
