--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -18,13 +18,17 @@
         <a href="{{ url_for('main.index') }}">
           <img src="../../static/resources/logo.png" alt="Home" class="header-icon header-logo" />
         </a>
-        <h1>Travel together&trade;</h1>
-        <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
+        <h1>Travel together</h1>
+        <div class="spacer">
+          <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
+
+          {% if current_user.is_authenticated: %}
+          <a href="{{ url_for('auth.logout_post') }}">
+            <p class="logout-button">Log out</p>
+          </a>
+          {% endif %}
+        </div>
       </div>
-      
-      {% if current_user.is_authenticated: %}
-      <a href="{{ url_for('auth.logout_post') }}">Logout</a>
-      {% endif %}
     </header>
     <section class="content">{% block content %}{% endblock %}</section>
     <footer><small>Developed for Web applications</small></footer>
