--- a/travel_together_app/travel_together/templates/trip_template.html
+++ b/travel_together_app/travel_together/templates/trip_template.html
@@ -16,7 +16,7 @@
               alt="Profile picture"
               class="avatar"
             />
-            <span class="username">{{ trip.user.name }}</span>
+            <span class="username">{{ trip.creator.name }}</span>
             <span class="timestamp">{{ trip.timestamp }}</span>
           </div>
           <div class="content">{{ trip.text }}</div>
