made separate page for trip form and added a return to home button from trip view

--- a/travel_together_app/travel_together/templates/main/index.html
+++ b/travel_together_app/travel_together/templates/main/index.html
@@ -6,7 +6,11 @@
   <h2>Home</h2>
   <p>See the most recent activity for you.</p>
 
-  <section>
+  <a href="/form">
+    <button>Create a new travel proposal!</button>
+  </a>
+
+  <!-- <section>
     <h2>Create a travel proposal!</h2>
     <form action="{{ url_for('main.new_trip') }}" method="post">
 
@@ -60,7 +64,7 @@
       <br>
       <button type="submit">Publish</button>
     </form>
-  </section>
+  </section> -->
 
   <section>
     <h2>Latest trips</h2>
