--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block content %}
 <div class="single_trip_container">
   {% include 'trip_template.html' with context %}
   <section>
@@ -21,4 +23,8 @@
     {% endfor %}
   </div>
 </div>
+<br>
+<a href = "/">
+  <button>Return</button>
+</a>
 {% endblock %}
