--- a/travel_together_app/travel_together/templates/main/user_template.html
+++ b/travel_together_app/travel_together/templates/main/user_template.html
@@ -1,37 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <div class="content">
-  <header>
-    <h2>{{ user.name }}</h2>
-      {% if follow_button == "follow" %}
-        <form action="{{ url_for('main.follow', user_id=user.id) }}" method="post">
-          <input type="submit" value="Follow">
-        </form>
-      {% elif follow_button == "unfollow" %}
-        <form action="{{ url_for('main.unfollow', user_id=user.id) }}" method="post">
-          <input type="submit" value="Unfollow">
-        </form>
-      {% endif %}
-      <h3>Following</h3>
-        <ul>
-        {% for follow in Following %}
-          <li>
-            <a href="{{ url_for('main.profile', user_id=follow.id) }}">
-              {{ follow.username }}
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
-      <h3>Followers</h3>
-      <ul>
-        {% for follower in Followers %}
-          <li>
-            <a href="{{ url_for('main.profile', user_id=follower.id) }}">
-              {{ follower.username }}
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
-    </header>
-    <section>{% include 'trips_template.html' %}</section>
+  <header><h2>{{ user.name }}</h2></header>
+  Trips {{ user.name }} participates in:
+  <section>{% include 'trips_template.html' %}</section>
 </div>
 {% endblock %}
