--- a/travel_together_app/travel_together/templates/trips_template.html
+++ b/travel_together_app/travel_together/templates/trips_template.html
@@ -1,3 +1,7 @@
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/trips_template.css') }}"/>
+{% endblock %}
+
 <div class="trips">
     {% for trip in trips %}
         {% include 'trip_template.html' %}
