--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -20,8 +20,9 @@
         </a>
         <h1>Travel together</h1>
         <div class="spacer">
-          <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
-
+          <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
+            <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
+          </a>
           {% if current_user.is_authenticated: %}
           <a href="{{ url_for('auth.logout_post') }}">
             <p class="logout-button">Log out</p>
