user can now upload a profile picture, but it doesn't quite work when displaying

--- a/travel_together_app/travel_together/templates/auth/signup2.html
+++ b/travel_together_app/travel_together/templates/auth/signup2.html
@@ -11,13 +11,14 @@
     <div class="main-container">
         <div class="signup-container">
             <h2>Sign Up</h2>
-            <form class="form-container" action="{{ url_for('auth.signup2_post') }}" method="post">
+            <form class="form-container" action="{{ url_for('auth.signup2_post') }}" method="post" enctype="multipart/form-data">
                 <div class="credential-inputs">
                     <input type="text" name="description" placeholder="Description"/>
                     <input type="date" name="birthday" placeholder="Birthday" required/>
                     <input type="text" name="home_uni" placeholder="Home University" required/>
                     <input type="text" name="visiting_uni" placeholder="Visiting University" required/>
                     <input type="text" name="country" placeholder="Country" required/>
+                    <input type="file" id="profile_pic" name="profile_pic" accept="image/*" style="display: none">
                 </div>
                 <input type="submit" value="Sign Up"/>
             </form>
