--- a/travel_together_app/travel_together/templates/main/user_template.html
+++ b/travel_together_app/travel_together/templates/main/user_template.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <div class="content">
-  <header><h2>{{ user.name }}</h2></header>
+  <header><h2>{{ user.name }}</h2>
+    <img src="{{ url_for('static', filename='uploads/' ~ current_user.profile_pic) }}">
+  </header>
   <h3>About {{ user.name }}:</h3>
   <br>
   <section>
