--- a/travel_together_app/travel_together/templates/auth/signup.html
+++ b/travel_together_app/travel_together/templates/auth/signup.html
@@ -38,6 +38,8 @@
 
                 <label for="birthday">Birthday</label>
                 <input type="date" id="birthday" name="birthday" placeholder="Birthday" required />
+                <label for="profile_pic">Upload profile picture</label>
+                <input type="file" name="profile_pic" accept="image/*">
                 <input type="password" name="password" placeholder="Password" required />
                 <input type="password" name="password_repeat" placeholder="Repeat password" required />
             </div>
