--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -16,14 +16,14 @@
     <header>
       <div class="header-container">
         <a href="{{ url_for('main.index') }}">
-          <img src="../../static/resources/logo.png" alt="Home" class="header-icon header-logo" />
+          <img src="../../static/resources/logo-full.png" alt="Home" class="header-icon header-logo" />
         </a>
         <h1>Travel together</h1>
         <div class="spacer">
-          <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
-            <img src="../../static/resources/Defaultpfp.png" alt="Profile" class="header-icon" />
-          </a>
           {% if current_user.is_authenticated: %}
+          <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
+            <img src="{{ url_for('static', filename='uploads/' ~ current_user.profile_pic) }}" alt="Profile" class="header-icon" />
+          </a>
           <a href="{{ url_for('auth.logout_post') }}">
             <p class="logout-button">Log out</p>
           </a>
