basic message board functionalities built out

--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -28,6 +28,7 @@ body footer {
   left: 0;
   height: 60px;
   width: calc(100% - 20px);
+  font-weight: strong;
   /* subtract padding from total width */
   padding: 0px 10px;
   z-index: 99;
