--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -18,11 +18,11 @@
         <a href="{{ url_for('main.index') }}">
           <img src="../../static/resources/logo-full.png" alt="Home" class="header-icon header-logo" />
         </a>
-        <h1>Travel together</h1>
+        <h1>Travel Together!</h1>
         <div class="spacer">
           {% if current_user.is_authenticated: %}
           <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
-            <img src="{{ url_for('static', filename='uploads/' ~ current_user.profile_pic) }}" alt="Profile" class="header-icon" />
+            <img src="{{ url_for('static', filename='resources/' ~ current_user.profile_pic) }}" alt="Profile" class="header-icon" />
           </a>
           <a href="{{ url_for('auth.logout_post') }}">
             <p class="logout-button">Log out</p>
