--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -46,6 +46,28 @@
     {% else %}
         <p>You are an active member of this trip.</p>
     {% endif %}
+
+    {% if already_joined %}
+      <div class="message-board-area">
+        {% for message in trip.messages %}
+          <img src="{{ url_for('static', filename='resources/' ~ current_user.profile_pic) }}" alt="Profile" class="header-icon" />
+          <div class = messages>
+            <p><strong>{{ message.user.name }}: {{message.timestamp.strftime('%b %d, %Y,%H:%M')}}
+            <p>{{ message.content }}</p>
+          </div>
+        {% endfor %}
+        <form action="{{ url_for('main.new_message', trip_id = trip.id)}}" method="post">
+          <textarea
+            name="message-content"
+            rows="4"
+            cols="50"
+            placeholder="What's on your mind?"
+          ></textarea>
+          <br />
+          <button type="submit">Send</button>
+        </form>
+        </div>
+    {% endif %}
 </div>
   <!-- <section>
     <h2>Reply to the trip</h2>
@@ -61,6 +83,7 @@
       <button type="submit">Publish</button>
     </form>
   </section> -->
+  
   <div class="replies_section">
     {% for trip in responses %}
       {% include 'trip_template.html' %}
