users can edit their own profiles now, profile pic only works when uploading at edit-profile

--- a/travel_together_app/travel_together/static/css/signup.css
+++ b/travel_together_app/travel_together/static/css/signup.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 /*=========================== SIGNUP CONTAINER ===========================*/
@@ -43,7 +43,7 @@
 
 .form-container {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
